--- a/src/components/views/CvTemplate.module.css
+++ b/src/components/views/CvTemplate.module.css
@@ -1,8 +1,18 @@
+.title {
+  text-align: center;
+  margin-bottom: 25px;
+}
 .cv {
-    width: 794px;
-    height: 1150px;
+    width: 864px;
+    height: 1220px;
+    padding:35px;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    background-color: #fbfbf8;
   }
+.cv_header {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
