--- a/src/components/Modals/CustomModal.module.css
+++ b/src/components/Modals/CustomModal.module.css
@@ -14,5 +14,22 @@
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
-    padding:20px;
+    padding:30px;
+    min-height: 300px;
+    display:flex;
+    align-items: center;
+}
+.modal_form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap:20px;
+}
+.form_inputs {
+    display:flex;
+    flex-direction: column;
+    gap:15px;
+    width:70%;
 }
