Added preview view and upload photo functionality

--- a/src/components/information_section/InformationSection.module.css
+++ b/src/components/information_section/InformationSection.module.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     gap: 45px;
+    min-width: 794px;
   }
   .cv__img {
     width: 180px;
@@ -14,12 +15,37 @@
     height: 180px;
     border-radius: 50%;
     overflow: hidden;
-    border: 0.2px double #d6d7d7;
     object-fit:cover;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
     margin-top: 10px;
+   
+  }
+  .cv__img__photo_dropzone {
+    position: absolute;
+    z-index: -1;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    margin-top: 0;
+    opacity: 0.8;
+    transition:ease-in-out;
+    transition-duration: 0.1s;
+  }
+
+  .cv_image_dropzone {
+    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .container:hover .cv__img__photo_dropzone {
+    opacity: 0.5;
+  }
+  .cv__img__photo_border {
+    border: 0.2px double #d6d7d7;
   }
   .cv__information__content {
     border-bottom: 1px solid #d6d7d7;
@@ -69,5 +95,4 @@
   display:flex;
   align-items: flex-end;
  }
-
 
