--- a/src/components/information_section/InformationSection.module.css
+++ b/src/components/information_section/InformationSection.module.css
@@ -1,98 +1,100 @@
 .cv__information {
-    height: 275px;
-    display: flex;
-    justify-content: space-between;
-    gap: 45px;
-    min-width: 794px;
-  }
-  .cv__img {
-    width: 180px;
-    height: 275px;
-    position: relative;
-  }
-  .cv__img__photo {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    overflow: hidden;
-    object-fit:cover;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    margin-top: 10px;
-   
-  }
-  .cv__img__photo_dropzone {
-    position: absolute;
-    z-index: -1;
-    left:50%;
-    top:50%;
-    transform: translate(-50%, -50%);
-    margin-top: 0;
-    opacity: 0.8;
-    transition:ease-in-out;
-    transition-duration: 0.1s;
-  }
+  height: 275px;
+  display: flex;
+  justify-content: space-between;
+  gap: 45px;
+  min-width: 794px;
+}
+.cv__img {
+  width: 180px;
+  height: 275px;
+  position: relative;
+}
+.cv__img__photo {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit:scale-down;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  margin-top: 10px;
+}
+.cv__img__photo_dropzone {
+  position: absolute;
+  z-index: -1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 0;
+  opacity: 0.8;
+  transition: ease-in-out;
+  transition-duration: 0.1s;
+}
 
-  .cv_image_dropzone {
-    position: relative;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  .container:hover .cv__img__photo_dropzone {
-    opacity: 0.5;
-  }
-  .cv__img__photo_border {
-    border: 0.2px double #d6d7d7;
-  }
-  .cv__information__content {
-    border-bottom: 1px solid #d6d7d7;
-    flex-grow: 1;
-  }
-  .cv__information__content__name {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 28px;
-    color: rgb(48, 51, 51);
-    border-bottom: 1px solid #d6d7d7;
-  }
-  .cv__information_my_name {
-    padding-bottom: 8px;
-  }
-  
-  .cv_information_skills_contact_info {
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
-  }
-  .cv_information__details {
-    width: 60%;
-  }
+.cv_image_dropzone {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container:hover .cv__img__photo_dropzone {
+  opacity: 0.5;
+}
+.cv__img__photo_border {
+  border: 0.2px double #d6d7d7;
+}
+.cv__information__content {
+  border-bottom: 1px solid #d6d7d7;
+  flex-grow: 1;
+}
+.cv__information__content__name {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 28px;
+  color: rgb(48, 51, 51);
+  border-bottom: 1px solid #d6d7d7;
+}
+.cv__information_my_name {
+  padding-bottom: 8px;
+}
 
-  .cv_information__bars {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-    column-gap: 40px;
-    row-gap: 10px;
-  }
-  
-  .cv_information__contact__items__container {
-    padding-left: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-  }
- .bar_container {
-  display:flex;
-  gap:15px;
-  align-items:end;
-  position:relative;
- }
- .edit_button_container {
-  display:flex;
+.cv_information_skills_contact_info {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.cv_information__details {
+  width: 60%;
+}
+
+.cv_information__bars {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+  column-gap: 40px;
+  row-gap: 10px;
+}
+
+.cv_information__contact__items__container {
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+.bar_container {
+  display: flex;
+  gap: 15px;
+  align-items: end;
+  position: relative;
+}
+.edit_button_container {
+  display: flex;
   align-items: flex-end;
- }
-
+}
+.edit_github_container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
