--- a/src/components/views/CvTemplate.module.css
+++ b/src/components/views/CvTemplate.module.css
@@ -8,10 +8,28 @@
     padding:35px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
+    justify-content:space-between;
   }
 .cv_header {
   width:100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.buttons_container {
+  display:flex;
+  gap:40px;
+}
+.clause_buttons {
+  display:flex;
+  gap:10px;
+  margin-top: 10px;
+}
+.add_clause {
+  display:flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 100px;
+  gap:10px;
 }
